auth module & created job api

--- a/package.json
+++ b/package.json
@@ -1,11 +1,32 @@
 {
   "name": "jobbook_backend",
   "version": "1.0.0",
-  "description": "backend architechture for jobbook",
+  "description": "backend architecture for jobbook security ",
   "main": "server.js",
   "scripts": {
+    "start": "ndoe server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "dzyntech",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
+    "hpp": "^0.2.3",
+    "jsonwebtoken": "^9.0.2",
+    "mime-types": "^2.1.35",
+    "mongoose": "^8.0.2",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.7",
+    "nodemon": "^3.0.2",
+    "xss-clean": "^0.1.4"
+  }
 }
