--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "backend architecture for jobbook security ",
   "main": "server.js",
   "scripts": {
-    "start": "ndoe server.js",
+    "start": "node server.js",
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
