--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "firebase-admin": "^12.0.0",
     "helmet": "^7.1.0",
     "hpp": "^0.2.3",
+    "html-pdf-node": "^1.0.8",
     "jsonwebtoken": "^9.0.2",
     "mime-types": "^2.1.35",
     "mongoose": "^8.0.2",
