--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "nodemailer": "^6.9.7",
     "nodemon": "^3.0.2",
     "puppeteer": "^22.1.0",
+    "socket.io": "^4.7.5",
     "xss-clean": "^0.1.4"
   }
 }
